--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.google.android.material:material:1.0.0'
@@ -33,4 +34,5 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'me.itangqi.waveloadingview:library:0.3.5'
 }
